[project]
name = "delta-lake"
version = "0.1.0"
description = ""
authors = [
    {name = "jesperthoftillemannjaeger",email = "Jesperjag86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deltalake (>=0.24.0,<0.25.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
